--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   <meta property="og:title" content="Techyon 2024 - PCCE's Annual Inter-College Technical Fest" />
   <meta property="og:description" content="Experience Techyon 2024, an inter-college technical event featuring challenges and competitions across all departments at PCCE." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com" />
-  <meta property="og:image" content="https://yourdomain.com/images/techyon-thumbnail.jpg" />
+  <meta property="og:url" content="https://techyon2024.netlify.app/" />
+  <meta property="og:image" content="https://techyon2024.netlify.app/images/techyon_logo.png" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Techyon 2024 - PCCE's Annual Inter-College Technical Fest" />
   <meta name="twitter:description" content="Techyon 2024 hosts exciting inter-college technical events across various departments at PCCE." />
-  <meta name="twitter:image" content="https://yourdomain.com/images/techyon-thumbnail.jpg" />
+  <meta name="twitter:image" content="https://techyon2024.netlify.app/images/techyon_logo.png" />
 
   <!-- Mobile Responsiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   <!-- Canonical URL (Helps with SEO by preventing duplicate content issues) -->
-  <link rel="canonical" href="https://yourdomain.com" />
+  <link rel="canonical" href="https://techyon2024.netlify.app" />
 
   <!-- Structured Data for better search engine understanding -->
   <script type="application/ld+json">
@@ -41,19 +41,16 @@
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "P.O. Box 12345",
-        "addressLocality": "Vasco Da Gama",
+        "addressLocality": "Verna",
         "addressRegion": "Goa",
-        "postalCode": "403802",
+        "postalCode": "403722",
         "addressCountry": "IN"
       }
     },
-    "image": "https://yourdomain.com/images/techyon-event.jpg",
+    "image": "https://techyon2024.netlify.app/images/techyon_logo.png",
     "offers": {
-      "@type": "Offer",
-      "url": "https://yourdomain.com/tickets",
-      "price": "500",
-      "priceCurrency": "INR",
-      "validFrom": "2024-09-01"
+      "@type": "events",
+      "url": "https://techyon2024.netlify.app/pages/it.html"
     }
   }
   </script>
