--- a/pages/cs.html
+++ b/pages/cs.html
@@ -1192,7 +1192,7 @@ display: block;
                           <div class="button-font chnage-size">
                             Coordinator 1: Lenader
                             <span style="color: #D80286; cursor: pointer;" onclick="redirectToWhatsApp('918208962521')">8208962521</span>
-                          </div>
+                          </div><br>
                           <div class="button-font chnage-size">
                             Coordinator 2: Jimil Mandani
                             <span style="color: #D80286; cursor: pointer;" onclick="redirectToWhatsApp('919175045787')">9175045787</span>
@@ -1344,7 +1344,7 @@ display: block;
                     <div class="blog-one-name">
                       <div class="button-font chnage-size">
                         Coordinator 1: Joel Fernandes
-                        <span style="color: #D80286; cursor: pointer;" onclick="redirectToWhatsApp('918605730886')">7875914253</span>
+                        <span style="color: #D80286; cursor: pointer;" onclick="redirectToWhatsApp('917875914253')">7875914253</span>
                       </div><br>
                       <div class="button-font chnage-size">
                         Coordinator 2: Gail Fernandes
