--- a/index.html
+++ b/index.html
@@ -533,6 +533,10 @@
                 loading="lazy" class="logo-image"></div>
                  <!-- comp -->
               <div class="logo-image-wrapper"><img width="151" height="43" alt="Logo Text"
+                src="/images/dept/comp/sponsors/png.webp"
+                loading="lazy" class="logo-image"></div>
+              
+                <div class="logo-image-wrapper"><img width="151" height="43" alt="Logo Text"
                 src="/images/dept/comp/sponsors/Altered Reality.png"
                 loading="lazy" class="logo-image"></div>
             </div>
