--- a/pages/team.html
+++ b/pages/team.html
@@ -498,7 +498,7 @@
                                     <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c64"
                                         class="social-icon-circle"></div>
                                 </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c65"
-                                        href="https://www.linkedin.com/in/meave-d-souza-4691222b0?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="round-circle w-inline-block"><img
+                                        href="https://www.linkedin.com/in/richa-patil-165844329?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="round-circle w-inline-block"><img
                                             width="20" height="20" alt="icon
 " src="/images/logo/linkedin-icon-2-logo-svgrepo-com.svg"
                                             loading="lazy" class="social-icon-image" />
