--- a/pages/team.html
+++ b/pages/team.html
@@ -741,9 +741,9 @@
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
                             <div class="about-one-team-image"><img width="100%" height="436" alt=""
-                                src="/images/core/Sai.webp"
+                                src="/images/core/sai.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
-                                srcset="/images/core/Sai.webp 500w, /images/core/Sai.webp 780w"
+                                srcset="/images/core/sai.webp 500w, /images/core/sai.webp 780w"
                                 class="auto-fit responsive-image-full-width" />
                                 <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5d"
                                 class="about-one-team-image-overlay">
